<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transaction"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/navigation_planning"
        android:icon="@drawable/ic_invest"
        android:title="@string/nav_planning" />
    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
