<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appquanlychitieu.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.appquanlychitieu.ui.transaction.TransactionListFragment"
        android:label="@string/nav_transactions"
        tools:layout="@layout/fragment_transaction_list" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.appquanlychitieu.ui.statistics.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_planning"
        android:name="com.example.appquanlychitieu.ui.planning.PlanningFragment"
        android:label="@string/nav_planning"
        tools:layout="@layout/fragment_planning">
        <argument
            android:name="initialTab"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.appquanlychitieu.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
    </fragment>

    <fragment
        android:id="@+id/navigation_goal_history"
        android:name="com.example.appquanlychitieu.ui.goals.GoalHistoryFragment"
        android:label="Lịch sử nạp"
        tools:layout="@layout/fragment_goal_history">
        <argument
            android:name="goalId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="goalName"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="remoteGoalId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>
